# allwpilib

./: .bazelrc  .styleguide  BUILD.bazel  MODULE.bazel  WORKSPACE
.github/workflows/: bazel.yml  gradle.yml  sync_fork.yml
apriltag/src/main/java/edu/wpi/first/apriltag/: BUILD.bazel
apriltag/src/main/native/: BUILD.bazel
apriltag/src/test/java/edu/wpi/first/apriltag/: BUILD.bazel
apriltag/src/test/native/: BUILD.bazel
apriltag/src/test/resources/: BUILD.bazel
cscore/src/main/native/: BUILD.bazel
shared/bazel/rules/: cc_rules.bzl  java_rules.bzl
shared/bazel/rules/jni/: cc_jni.bzl  java_jni.bzl
shared/bazel/toolchains/jni/: BUILD
wpilibcExamples/: build_cpp_examples.bzl
wpilibjExamples/: build_java_examples.bzl
wpimath/src/main/native/: BUILD.bazel
wpiutil/: CMakeLists.txt
wpiutil/src/main/native/: BUILD.bazel
