
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_java", version = "5.5.0")
bazel_dep(name = "rules_python", version = "0.21.0")
bazel_dep(name = "googletest", version = "1.12.1", repo_name = "gtest")
bazel_dep(name = "rules_jvm_external", version = "5.2")
bazel_dep(name = "bzlmodrio-imgui", version = "1.89.1-1")
bazel_dep(name = "bzlmodrio-opencv", version = "4.6.0-4")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2023-7")
